--- a/frontend/resources/public/index.html
+++ b/frontend/resources/public/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <h2>Ticket Viewer</h2>
     </div>
     <script src="js/compiled/frontend.js" type="text/javascript"></script>
   </body>
